--- a/index.html
+++ b/index.html
@@ -1,50 +1,86 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>Starbucks Map - 노원구</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>올리브영 매장 지도 (서울)</title>
+
+  <!-- Leaflet CSS -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin=""
+  />
+
   <style>
-    #map { height: 600px; width: 100%; }
+    html, body { height: 100%; margin: 0; }
+    #map { height: 100vh; width: 100%; }
+    .leaflet-popup-content { font-size: 14px; line-height: 1.5; }
+    .brand {
+      position: absolute; left: 12px; top: 12px; z-index: 1000;
+      background: rgba(255,255,255,.92); padding: 8px 12px; border-radius: 12px;
+      box-shadow: 0 2px 12px rgba(0,0,0,.08); font-weight: 600;
+    }
   </style>
 </head>
 <body>
-  <h2>노원구 스타벅스 지도</h2>
+  <div class="brand">올리브영 매장 지도 · 서울</div>
   <div id="map"></div>
 
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <!-- Leaflet JS -->
+  <script
+    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+    crossorigin=""
+  ></script>
+
   <script>
-    // Khởi tạo bản đồ tại 노원구
-    var map = L.map('map').setView([37.6547, 127.0579], 14);
-
-    // Thêm tile layer (nền bản đồ từ OpenStreetMap)
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 19,
-      attribution: '© OpenStreetMap contributors'
-    }).addTo(map);
-
-    // Định nghĩa icon Starbucks (logo chính thức 2011)
-    var starbucksIcon = L.icon({
-      iconUrl: 'https://upload.wikimedia.org/wikipedia/sco/d/d3/Starbucks_Corporation_Logo_2011.svg',
-      iconSize: [40, 40],
-      iconAnchor: [20, 20],
-      popupAnchor: [0, -20]
-    });
-
-    // Dữ liệu Starbucks (điểm mẫu)
-    var starbucksData = [
-      { name: "스타벅스 노원역점", address: "서울 노원구 동일로 1413", lat: 37.6547, lng: 127.0579 },
-      { name: "스타벅스 노원상계점", address: "서울 노원구 동일로215길 2", lat: 37.6562, lng: 127.0595 },
-      { name: "스타벅스 은행사거리점", address: "서울 노원구 중계동 중계로 217", lat: 37.6515, lng: 127.0734 },
-      { name: "스타벅스 노원KT점", address: "서울 노원구 상계동 723", lat: 37.6573, lng: 127.0558 }
+    // 1) Dữ liệu JSON nhúng trực tiếp
+    const oliveyoungStores = [
+      {"name":"올리브영 명동 타운 (Myeongdong Global)","address":"서울특별시 중구 명동길 53 1–2층","lat":37.5649,"lng":126.9855},
+      {"name":"올리브영 시청역점","address":"서울특별시 중구 세종대로16길 1 1층","lat":37.5658,"lng":126.9753},
+      {"name":"올리브영 명동역점","address":"서울특별시 중구 퇴계로 127 1층","lat":37.5610,"lng":126.9862},
+      {"name":"올리브영 종로YBM점","address":"서울특별시 종로구 종로 104","lat":37.5699,"lng":126.9865},
+      {"name":"올리브영 성수역점","address":"서울특별시 성동구 아차산로 91","lat":37.5445,"lng":127.0564},
+      {"name":"올리브영 삼성점","address":"서울특별시 강남구 테헤란로108길 22","lat":37.5088,"lng":127.0616},
+      {"name":"올리브영 청담사거리점","address":"서울특별시 강남구 도산대로89길 8","lat":37.5247,"lng":127.0415},
+      {"name":"올리브영 남역삼점","address":"서울특별시 강남구 논현로 318","lat":37.4968,"lng":127.0319},
+      {"name":"올리브영 석촌호수로점","address":"서울특별시 송파구 석촌호수로 88 1층","lat":37.5065,"lng":127.1069},
+      {"name":"올리브영 구파발역점","address":"서울특별시 은평구 진관2로 12","lat":37.6368,"lng":126.9188},
+      {"name":"올리브영 경희대점","address":"서울특별시 동대문구 경희대로 2","lat":37.5946,"lng":127.0525},
+      {"name":"올리브영 광운대역점","address":"서울특별시 노원구 석계로 102 1층 2호","lat":37.6230,"lng":127.0618},
+      {"name":"올리브영 녹두거리점","address":"서울특별시 관악구 신림로 127 1층","lat":37.4826,"lng":126.9309},
+      {"name":"올리브영 문래점","address":"서울특별시 영등포구 선유로 63 1층","lat":37.5172,"lng":126.8950},
+      {"name":"올리브영 길동역점","address":"서울특별시 강동구 양재대로 1481 1층","lat":37.5352,"lng":127.1427}
     ];
 
-    // Thêm markers với logo Starbucks
-    starbucksData.forEach(function(store) {
-      L.marker([store.lat, store.lng], { icon: starbucksIcon })
-        .addTo(map)
-        .bindPopup("<b>" + store.name + "</b><br>" + store.address);
+    // 2) Khởi tạo bản đồ
+    const map = L.map('map').setView([37.5665, 126.9780], 11);
+
+    // 3) Nền bản đồ OSM
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 19,
+      attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(map);
+
+    // 4) Icon logo
+    const oliveIcon = L.icon({
+      iconUrl: 'oliveyoung_logo.png', // đặt file logo này cùng thư mục
+      iconSize: [40, 40],
+      iconAnchor: [20, 20],
+      popupAnchor: [0, -18]
     });
+
+    // 5) Thêm marker
+    const bounds = [];
+    oliveyoungStores.forEach(p => {
+      L.marker([p.lat, p.lng], { icon: oliveIcon })
+        .bindPopup(`<b>${p.name}</b><br>${p.address}`)
+        .addTo(map);
+      bounds.push([p.lat, p.lng]);
+    });
+    if (bounds.length) map.fitBounds(bounds, { padding: [30, 30] });
   </script>
 </body>
 </html>
